provarAnt/00D1b0000000d5bEAA/objects/SalesIQ__AccountAssignmentUpdates__c.object
<CustomObject>
    <description>Object contains information related to AccountTeamMember Updates by SalesIQ.</description>
    <fields>
        <fullName>SalesIQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountAssignmentUpdates</relationshipLabel>
        <relationshipName>AccountAssignmentUpdates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Assigned_Team_Role__c</fullName>
        <label>Assigned Team Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountAssignmentUpdates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__UnAssigned_Team_Role__c</fullName>
        <label>UnAssigned Team Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Un_Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Un Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountAssignmentUpdates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AccountAssignmentUpdates</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>AccountAssignmentUpdates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AccountAssignmentUpdates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>